# someip-video-streaming-app

./: CMakeLists.txt
conf/: consumer.json  provider.json
conf/cross-device/: consumer.json  provider.json
conf/same-device/: consumer.json  provider.json
include/: conf.hpp
scripts/: run-consumer.sh  run-provider.sh
scripts/cross-device/: run-consumer.sh  run-provider.sh
scripts/same-device/: run-consumer.sh  run-provider.sh
src/: consumer.cpp  provider.cpp
